Fix an SEO issue with Sierpinski blog
The code section used a `pre` block and messed up the page for mobile
users.

Added a overflow-x: auto to the styling on all blogs. Now mobile is more
responsive and SEO will not suffer as much.

--- a/blog/style.css
+++ b/blog/style.css
@@ -78,6 +78,10 @@ h4 {
     font-size: 1.2em;
 }
 
+pre {
+    overflow-x: auto;
+}
+
 nav ul {
     list-style: none;
     text-align: right;
